[package]
name = "copy"
version = "1.0.0"
edition = "2021"
authors = ["Alex Lay-Calvert <alex.laycalvert@gmail.com>"]
license = "MIT"
description = "A simple 'cp' clone made in Rust"
readme = "README.md"
homepage = "https://github.com/alex-laycalvert"
repository = "https://github.com/alex-laycalvert/learnin.git"
keywords = ["copy", "test", "tutorial"]
categories = ["command-line-utilities"]

